Bug 881067 - Scrollbars displayed at the top left side of a page m=mbrubeck
UltraBlame original commit: 76553702b21b7d3635b28a6cf73ce7423fced45a

--- a/browser/metro/base/content/cursor.css
+++ b/browser/metro/base/content/cursor.css
@@ -177,20 +177,3 @@ events
 none
 ;
 }
-/
-*
-Style
-the
-scrollbars
-*
-/
-html
-xul
-|
-scrollbar
-{
-display
-:
-none
-;
-}
